--- a/shop/templates/about.html
+++ b/shop/templates/about.html
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>About Page</title>
-</head>
-<body>
-	<h1>About</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+<h1>About</h1>
+{% endblock %}
