--- a/shop/templates/home.html
+++ b/shop/templates/home.html
@@ -1,9 +1,4 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Home Page</title>
-</head>
-<body>
-	<h1>Home</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+<h1>Home</h1>
+{% endblock %}
