--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -1,7 +1,70 @@
-<header>
+<!doctype html>
+<html lang="en">
+  <head>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+
+      <style type="text/css">
+        .material-icons.md-48 { font-size: 48px; }
+        .material-icons.md-24 { font-size: 24px; }
+      </style>
+
+    <title>{% block title %} {% endblock %}</title>
+  </head>
+  <body>
+    <!-- <header>
 	<a href="{% url 'home' %}">Home</a>
 	<a href="{% url 'about' %}">About</a>
-</header>
+</header> -->
+
+    <nav class="navbar navbar-expand-md navbar-light bg-dark">
+
+      <a href="#" class="navbar-brand"><i class="material-icons text-success md-48">store</i></a>
+      <button class="navbar-toggler bg-light" data-toggle="collapse" data-target="#navbar"><span class="navbar-toggler-icon"></span></button>
+      <div id="navbar" class="collapse navbar-collapse justify-content-between">
+      <ul class="navbar-nav">
+        <li class="nav-item dropdown"><a class="nav-link text-light text-uppercase font-weight-bold px-3 dropdown-toggle" data-toggle="dropdown" href="">Categories</a>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="">Category1</a>
+            <a class="dropdown-item" href="">Category2</a>
+            <a class="dropdown-item" href="">Category3</a>
+            <a class="dropdown-item" href="">Category4</a>
+            <a class="dropdown-item" href="">Category5</a>
+          </div>
+        </li>
+        <li class="nav-item"><a class="nav-link text-light text-uppercase font-weight-bold px-3" href="">Contacts</a></li>
+        <li class="nav-item"><a class="nav-link text-light text-uppercase font-weight-bold px-3" href="">About</a></li>
+      </ul>
+    
+
+      <form class="form-inline">
+        <div class="input-group">
+          <input type="text" placeholder="Search">
+          <div>
+            <button class="btn-success"><i class="material-icons md-24">search</i></button>
+          </div>
+        </div>
+      </form>
+      </div>
+    </nav>
 
 {% block content %}
 {% endblock %}
+
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+  </body>
+</html>
