--- a/shop/templates/home.html
+++ b/shop/templates/home.html
@@ -1,9 +1,15 @@
 {% extends 'base.html' %}
 
+{% load static %}
+
 {% block title %}
 	Home
 {% endblock %}
 
 {% block content %}
-<h1>Home</h1>
+	<div class="container-fluid">
+		<div class="row">
+			<img src="{% static 'sale1.png' %}">
+		</div>
+	</div>
 {% endblock %}
