--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -13,6 +14,8 @@
 
       <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+
+      <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
 
       <style type="text/css">
         .material-icons.md-48 { font-size: 48px; }
