--- a/shop/templates/home.html
+++ b/shop/templates/home.html
@@ -9,7 +9,51 @@
 {% block content %}
 	<div class="container-fluid">
 		<div class="row">
-			<img src="{% static 'sale1.png' %}">
+			<img class="img-fluid" src="{% static 'images/sale1.png' %}">
 		</div>
 	</div>
+
+	<div class="py-4">
+		<div class="container">
+			<div class="row">
+				<div class="col-10 mx-auto my-2 text-center">
+					<h1 class="text-capitalize font-weight-bold">
+						Our Products
+					</h1>
+				</div>
+			</div>
+		</div>
+		
+	</div>
+
+	<div class="container">
+		<div class="row">
+			{% for i in 'aaaaaaaa' %}
+				<div class="col-9 mx-auto col-md-6 col-lg-3">
+					<div class="card mb-5">
+						<div class="p-4">
+							<img class="card-img-top" src="{% static 'images/beauty.png' %}">
+						</div>
+						
+						<div class="card-footer d-flex justify-content-between" style="background: transparent; border-color: transparent;">
+							<p class="font-weight-bold mb-0">
+								Beauty
+							</p>
+							<h5 class="text-info font-italic mb-0">
+								$9.99
+							</h5>
+						</div>
+					</div>
+				</div>
+			{% endfor %}
+		</div>
+	</div>
+
+	
 {% endblock %}
+
+
+
+
+
+
