--- a/shop/templates/navbar.html
+++ b/shop/templates/navbar.html
@@ -1,16 +1,16 @@
 <nav class="navbar navbar-expand-md navbar-light bg-dark">
 
-      <a href="#" class="navbar-brand"><i class="material-icons text-success md-48">store</i></a>
+      <a href="/" class="navbar-brand"><i class="material-icons text-success md-48">store</i></a>
       <button class="navbar-toggler bg-light" data-toggle="collapse" data-target="#navbar"><span class="navbar-toggler-icon"></span></button>
       <div id="navbar" class="collapse navbar-collapse justify-content-between">
       <ul class="navbar-nav">
         <li class="nav-item dropdown"><a class="nav-link text-light text-uppercase font-weight-bold px-3 dropdown-toggle" data-toggle="dropdown" href="">Categories</a>
           <div class="dropdown-menu">
-            <a class="dropdown-item" href="">Category1</a>
-            <a class="dropdown-item" href="">Category2</a>
-            <a class="dropdown-item" href="">Category3</a>
-            <a class="dropdown-item" href="">Category4</a>
-            <a class="dropdown-item" href="">Category5</a>
+            <a class="dropdown-item" href="{% url 'home' %}">All products</a>
+            {% for category in links %}
+            <a class="dropdown-item" href="{{category.get_url}}">{{category.name}}</a>
+            {% endfor %}
+            
           </div>
         </li>
         <li class="nav-item"><a class="nav-link text-light text-uppercase font-weight-bold px-3" href="">Contacts</a></li>
