Add Product Detail

--- a/shop/templates/home.html
+++ b/shop/templates/home.html
@@ -32,7 +32,8 @@
 				<div class="col-9 mx-auto col-md-6 col-lg-3">
 					<div class="card mb-5">
 						<div class="p-4">
-							<img class="card-img-top" src="{{product.image.url}}" alt="{{product.name}}">
+							<a href="{{product.get_url}}"><img class="card-img-top" src="{{product.image.url}}" alt="{{product.name}}"></a>
+							
 						</div>
 						
 						<div class="card-footer d-flex justify-content-between" style="background: transparent; border-color: transparent;">
