--- a/shop/templates/base.html
+++ b/shop/templates/base.html
@@ -16,6 +16,7 @@
       rel="stylesheet">
 
       <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+      <link rel="stylesheet" type="text/css" href="{% static 'css/cart.css' %}">
 
       <style type="text/css">
         .material-icons.md-48 { font-size: 48px; }
