Fix Cart Template

--- a/shop/templates/cart.html
+++ b/shop/templates/cart.html
@@ -51,7 +51,7 @@
 						<br>
 						Unit Price: {{cart_item.product.price}}
 						<br>
-						Quantity: {{cart_item.product.quantity}} x {{cart_item.product.price}}
+						Quantity: {{cart_item.quantity}} x {{cart_item.product.price}}
 					</td>
 					<td>
 						${{cart_item.sub_total}}
