--- a/shop/templates/cart.html
+++ b/shop/templates/cart.html
@@ -59,14 +59,14 @@
 					{% if cart_item.quantity < cart_item.product.stock %}
 					<td>
 						<a href="{% url 'add_cart' cart_item.product.id %}"><i class="material-icons cart-icon">add_shopping_cart</i></a>
-						<a href=""><i class="material-icons cart-icon">remove_circle_outline</i></a>
-						<a href=""><i class="material-icons cart-icon">delete</i></a>
+						<a href="{% url 'cart_remove' cart_item.product.id %}"><i class="material-icons cart-icon">remove_circle_outline</i></a>
+						<a href="{% url 'cart_remove_product' cart_item.product.id %}"><i class="material-icons cart-icon">delete</i></a>
 					</td>
 					{% else %}
 					<td>
 						
-						<a href=""><i class="material-icons cart-icon">remove_circle_outline</i></a>
-						<a href=""><i class="material-icons cart-icon">delete</i></a>
+						<a href="{% url 'cart_remove' cart_item.product.id %}"><i class="material-icons cart-icon">remove_circle_outline</i></a>
+						<a href="{% url 'cart_remove_product' cart_item.product.id %}"><i class="material-icons cart-icon">delete</i></a>
 					</td>
 					{% endif %}
 					
