--- a/ecommerce/static/css/base.css
+++ b/ecommerce/static/css/base.css
@@ -19,3 +19,16 @@ body {
 	text-transform: uppercase;
 	letter-spacing: .2em;
 }
+
+.errorlist li {
+	color: red;
+	font-weight: bold;
+}
+
+
+
+
+
+
+
+
