--- a/shop/templates/login.html
+++ b/shop/templates/login.html
@@ -16,7 +16,7 @@
 			Login or Create a New Account
 		</h1>
 		<div class="row">
-			<div col-12 col-sm-12 col-lg-6 text-center custom_div>
+			<div class="col-12 col-sm-12 col-lg-6 text-center custom_div" >
 				<br>
 				<h2 class="product_title">
 					New User
